improved selected date indicator

--- a/frontend/src/components/Calendar.css
+++ b/frontend/src/components/Calendar.css
@@ -1,5 +1,13 @@
 .fc {
   margin-top: 1.5em;
-  margin-left: 4em;
-  margin-right: 2em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.fc-day.fc-today {
+  background: #FFF !important;
+}
+
+.fc-day-header.fc-today {
+  background: #007bff;
 }
