--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -8,11 +8,16 @@
 }
 
 .react-calendar {
-  margin-top: 5.4em;
-  margin-left: 2em;
+  width: 90%;
+  margin-top: 6.7em;
+  margin-left: 1em;
+  margin-right: 0;
   border: 1px solid #dee2e6;
+  font-size: 0.8rem !important;
+  padding-right: 0em;
+  padding-left: 0em;
 }
 
 .datePicker {
-  width: 27%;
+  width: 40%;
 }
