--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,45 +1,51 @@
-html, body {
+html, body, #root, .main  {
+  height: 100%;
+  margin: 0;
   overflow: hidden;
-  height: 100vh;
 }
 
-.LoginInfo {
-  text-align: right;
+.main {
+  display: grid;
+  grid-template-columns: 350px 1fr;
+  grid-template-rows: 1fr 10fr;
+  gap: 1em;
 }
 
-.navbar {
-  padding-bottom: 1rem !important;
+.main > div {
+  padding: 10px;
+}
+
+.navbar-container {
+  grid-column: 1/3;
 }
 
 .navbar-brand {
-  font-size: 1.5rem !important;
+  flex: 1;
+  font-size: 2rem !important;
 }
 
 .navbar-text {
-  margin-right: 0.75em;
+  margin-right: 1em;
+}
+
+.datepicker-container {
+  padding-top: 4em !important;
 }
 
 .calendar-container {
-  display: block;
-  height: 85vh;
-}
-
-.calendarRow {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background: #fff !important;
 }
 
 .react-calendar {
-  width: 90%;
-  margin-top: 6.7em;
-  margin-left: 1em;
-  margin-right: 0;
-  border: 1px solid #dee2e6;
-  font-size: 0.8rem !important;
-  padding-right: 0em;
-  padding-left: 0em;
+  border: 0;
 }
 
-.datePicker {
-  width: 40%;
+.spinner-container {
+  display: grid;
+  grid-column: 1/3;
+  justify-items: center;
+  align-items: center;
 }
