fixed eslint errors

--- a/ui/src/components/Calendar.css
+++ b/ui/src/components/Calendar.css
@@ -1,8 +1,8 @@
 .fc-day.fc-today {
-  background: #FFF !important;
+  background: #fff !important;
 }
 
 .fc-day-header.fc-today {
   background: #007bff;
-  color: #FFF;
+  color: #fff;
 }
